--- a/xmas-tree.service
+++ b/xmas-tree.service
@@ -7,7 +7,7 @@ After=syslog.target
 User=pi
 Group=pi
 WorkingDirectory=/home/pi/tree
-ExecStart=/usr/bin/python3 tree
+ExecStart=/usr/bin/python3 -m tree
 Restart=on-failure
 
 [Install]
